# waveformVisual

./: .gitmodules  CMakeLists.txt  readme.md
include/: CMakeLists.txt  read_file.h  window.h
src/: CMakeLists.txt  huffman.h  main.cpp
